--- a/package.json
+++ b/package.json
@@ -14,5 +14,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-webp": "^3.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "gulp-uglify": "^3.0.2"
+  }
 }
