--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-preset-env": "^1.6.1",
     "browser-sync": "^2.26.3",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^6.0.0",
     "gulp-babel": "^7.0.1",
     "gulp-inject": "^4.3.2",
     "gulp-sass": "^3.1.0",
